# smartcut

air/: application.xml  library.html  main.html  object.html
air/css/: effects.css  flowplayer.css  timeline.css
air/js/: ChromeViewport.js  Effects.js  Templates.js  Timeline.js  cropper.js  ext-config.js  flowplayer.controls.js  flowplayer.js  library.js  main.js  object.js
gst-opencv/: AUTHORS  ChangeLog  Makefile  Makefile.in  README  aclocal.m4  autoregen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
gst-opencv/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gst-opencv/m4/: Makefile  Makefile.in
gst-opencv/src/: Makefile  Makefile.am  Makefile.in  cartoon.h  colorchange.h  config.h.in~  gstcartoon.c  gstcartoon.h  gstfaceblur.c  gstfaceblur.h  gstfacecartoon.c  gstfacecartoon.h  gstobjblur.c  gstobjblur.h  gstobjeffect.c  gstobjeffect.h  libgstfaceblur.la  libgstfaceblur_la-gstfaceblur.lo  libgstobjblur.la  libgstobjblur_la-gstobjblur.lo
gst-opencv/src/.deps/: libgstfaceblur_la-gstfaceblur.Plo  libgstobjblur_la-gstobjblur.Plo
server/: Effects.py  MediaLibrary.py  Render.py  autosplit.py  eli.py  webserver.py
server/media/flv/: 4.flv  5.flv  7.flv
server/media/videos/: 4.avi  5.avi
snippets/: face.py  gnl.py  lastfm_src.py  pipes
snippets/bg/: Makefile  a  bgx  bgx.c
snippets/cartoon/: Makefile  cartoon  cartoon.c
snippets/colorchange/: Makefile  color  color.c
snippets/fire/: Makefile  fire  fire.c
snippets/gst-plugin/: configure.ac
snippets/gst-plugin/src/: Makefile.am  gstfaceblur.c  gstfaceblur.h  gstobjblur.c  gstobjblur.h
snippets/gst-plugin/src/.deps/: libgstfaceblur_la-gstfaceblur.Plo  libgstvideoflip_la-gstvideoflip.Plo
snippets/object/: Makefile  obj  obj-img.c  obj.c
snippets/objectflow/: Makefile  fire.h  obj  obj.c
snippets/tempmatch/: Makefile  temp  temp.c
